--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "postcss": "8.4.38",
         "react": "19.0.0-rc-f38c22b244-20240704",
         "react-dom": "19.0.0-rc-f38c22b244-20240704",
+        "sass": "^1.80.4",
+        "styled-components": "^6.1.13",
         "tailwindcss": "3.4.4",
         "typescript": "5.5.2",
         "use-debounce": "^10.0.1",
