--- a/package.json
+++ b/package.json
@@ -6,25 +6,29 @@
         "start": "next start"
     },
     "dependencies": {
-        "@heroicons/react": "^2.1.4",
-        "@tailwindcss/forms": "^0.5.7",
+        "@heroicons/react": "^2.1.5",
+        "@tailwindcss/forms": "^0.5.9",
         "@vercel/postgres": "^0.8.0",
         "autoprefixer": "10.4.19",
         "bcrypt": "^5.1.1",
         "clsx": "^2.1.1",
-        "next": "15.0.0-canary.56",
+        "next": "^15.0.3",
         "next-auth": "5.0.0-beta.19",
         "postcss": "8.4.38",
         "react": "19.0.0-rc-f38c22b244-20240704",
         "react-dom": "19.0.0-rc-f38c22b244-20240704",
-        "sass": "^1.80.4",
+        "sass": "^1.80.6",
         "styled-components": "^6.1.13",
         "tailwindcss": "3.4.4",
         "typescript": "5.5.2",
-        "use-debounce": "^10.0.1",
+        "use-debounce": "^10.0.4",
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@swc/cli": "^0.5.0",
+        "@swc/core": "^1.9.1",
+        "@swc/helpers": "^0.5.13",
+        "@swc/types": "^0.1.12",
         "@types/bcrypt": "^5.0.2",
         "@types/node": "20.14.8",
         "@types/react": "18.3.3",
@@ -32,5 +36,9 @@
     },
     "engines": {
         "node": ">=20.12.0"
+    },
+    "volta": {
+        "node": "20.12.0",
+        "pnpm": "9.12.3"
     }
 }
