--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.5",
+        "@line/liff": "^2.25.0",
         "@tailwindcss/forms": "^0.5.9",
         "@vercel/postgres": "^0.8.0",
         "autoprefixer": "10.4.19",
