--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
     "private": true,
     "scripts": {
         "build": "next build",
-        "dev": "next dev",
+        "dev": "next dev --turbopack",
         "start": "next start"
     },
     "dependencies": {
         "@heroicons/react": "^2.1.5",
         "@line/liff": "^2.25.0",
+        "@next/bundle-analyzer": "^15.0.3",
         "@tailwindcss/forms": "^0.5.9",
         "@vercel/postgres": "^0.8.0",
         "autoprefixer": "10.4.19",
+        "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "clsx": "^2.1.1",
-        "next": "^15.0.3",
+        "jotai": "^2.10.3",
+        "next": "15.0.3-canary.9",
         "next-auth": "5.0.0-beta.19",
         "postcss": "8.4.38",
         "react": "19.0.0-rc-f38c22b244-20240704",
